; ModuleID = '/home/carl/AnghaBench/Craft/deps/glfw/src/extr_wl_monitor.c_done.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/glfw/src/extr_wl_monitor.c_done.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl_output = type { i32 }
%struct._GLFWmonitor = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@GL_TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.wl_output*)* @done to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @done(i8* %0, %struct.wl_output* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.wl_output*, align 8
  %5 = alloca %struct._GLFWmonitor*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.wl_output* %1, %struct.wl_output** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct._GLFWmonitor*
  store %struct._GLFWmonitor* %7, %struct._GLFWmonitor** %5, align 8
  %8 = load i32, i32* @GL_TRUE, align 4
  %9 = load %struct._GLFWmonitor*, %struct._GLFWmonitor** %5, align 8
  %10 = getelementptr inbounds %struct._GLFWmonitor, %struct._GLFWmonitor* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store i32 %8, i32* %11, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
